--- a/index.html
+++ b/index.html
@@ -4,21 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
-  <title>378 Website Starter</title>
+  <title>Justin M. Snider</title>
  
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">  
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
 <body>
+
+    <article>
 	
-	<h1>378 Website Starter</h1>
+	<h1>Justin M. Snider</h1>
+	
+	<!-- Image	-->
+	
+	<img src="http://placebeyonce.com/400-300" alt="">
+      
+    <!-- Bio -->
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic consequuntur voluptatibus porro, ipsam consectetur, voluptatem esse cupiditate et alias debitis quae autem adipisci, deserunt eum dolores, labore aperiam nostrum quasi.</p>
+	
+	
+    <!-- Links -->
+
+	<h3>Let's Connect</h3>
+	<ul>
+	    <li><a href="#">Link A</a></li>
+	    <li><a href="#">Link B</a></li>
+	    <li><a href="#">Link C</a></li>
+    </ul>
+    
+<!-- Something Optional -->
+	
+	</article>
+	
 
 	
 
 <!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  	<script src="js/plugin.js"></script>
+  	<script src="js/lettering.js"></script>
   	<script src="js/scripts.js"></script>
 
 </body>
