--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script src="js/lettering.js"></script>
-  	<script src="js/scripts.js"></script>
+  	<script src="js/backstretch.js"></script>
 
 </body>
 </html>
