--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
 	
 	</article>
 	
+	<section>
+	
+	
+	<img src="img/caterpillar.jpg">
+	
+	<img src="img/pinball.jpg">
+	
+	<img src="img/page.jpg">
 
+
+    </section>
 	
 
 <!-- Scripts -->
